--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-session": "^1.19.0",
     "mongoose": "^9.1.5",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
